# table2sql

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  publish.yml  release.yml
cli/: index.html
csv_to_sql_insert/: __init__.py
docs/: README.md  cli.md  package.md
package/: index.html
search/: search_index.json
table2sql/: __init__.py  cli.py  helpers.py  main.py
table2sql/converters/: from_csv.py  from_excel.py
tests/: __init__.py  helpers.py  test_cli.py  test_csv_to_sql_insert.py  test_csvs.py  test_helpers.py  test_main.py  test_versions.py
tests/csv/: test_csv.py  test_file.csv
tests/excel/: test_excel.py  test_file.xlsm  test_file.xlsx  test_file_with_empty_columns.xlsx
